--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
-          <li><a class="getstarted scrollto" href="#about">EMPECEMOS</a></li>
+          <li><a class="getstarted scrollto" href="#about">EMPECEMOS!</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
